# tclopt

./: .gitignore  LICENSE  Makefile.in  README.md  configure  configure.ac  pkgIndex.tcl.in  swig_gen.sh.in  tclopt.tcl
autom4te.cache/: output.0  requests  traces.0
docs/: .buildinfo  Examples-tclopt.html  Examples.html  doc_gen.tcl  examples.ruff  genindex.html  index-Examples.html  index-docindex.html  index-tclopt.html  index.html  objects.inv  search.html  searchindex.js  startPage.ruff  tclopt-Examples.n  tclopt-tclopt.n  tclopt.n
docs/.doctrees/: Examples-Examples.doctree  Examples-tclopt.doctree  Examples.doctree  environment.pickle  index.doctree
docs/_sources/: Examples-Examples.rst.txt  Examples-tclopt.rst.txt  Examples.rst.txt  index.rst.txt
docs/assets/: ruff-min.css  ruff-min.js
examples/: LBFGS_Rozenbrock.tcl  diffEvolution.tcl  diffEvolution_Rozenbrock.tcl  genSimAnneal_Rozenbrock.tcl  sinfit.tcl
examples/html_charts/: LBFGS_Rozenbrock_plot.html  diffEvolution_Rozenbrock_plot.html  genSimAnneal_Rozenbrock_plot.html  sinfit.html
generic/: lbfgs.c  lbfgs_api.h  mpfit.c  mpfit.h  random_gen.c  random_gen.h  tclopt.i  tclopt_wrap.c
test/: all.tcl  all_codeCoverage.tcl  arbitaryTest.tcl  arbtest.tcl  benchmarkFuncs.tcl  codeCoverage.tcl  test.test
